add beauty layout and some fitch

--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 <body>
 
 <div class="container">
-    <div class="cards">
+    <section class="container__header">
+        <h1 class="container__header__heading">The list of nearest JavaScript conferences</h1>
+        <button class="container__header__subscription-button">Notify me of all upcoming events</button>
+    </section>
+    <div class="events-list">
+        <section class="events-list__header">
+            <h2 class="events-list__header__heading">Start date</h2>
+            <h2 class="events-list__header__heading">Name</h2>
+            <h2 class="events-list__header__heading">Status</h2>
+        </section>
+        <ul class="events-list__wrapper">
 
+        </ul>
     </div>
 </div>
 
